# cosmetics-records

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  base-instruction.txt  cosmetics_records.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
installer/macos/: create-dmg.sh
installer/windows/: installer.iss
references/: PREVOIUS.md
scripts/: build.py  compile_translations.py  create-icns.sh
scripts/pyinstaller_hooks/: hook-pyqt6-runtime.py
src/cosmetics_records/: __init__.py  app.py  config.py
src/cosmetics_records/controllers/: __init__.py  client_controller.py  inventory_controller.py  product_controller.py  treatment_controller.py
src/cosmetics_records/database/: __init__.py  connection.py
src/cosmetics_records/database/migrations/: __init__.py  migration_manager.py  v001_initial_schema.py  v002_add_audit_client_id.py
src/cosmetics_records/locales/de/LC_MESSAGES/: messages.mo  messages.po
src/cosmetics_records/locales/en/LC_MESSAGES/: messages.mo  messages.po
src/cosmetics_records/models/: __init__.py  audit.py  client.py  product.py  treatment.py
src/cosmetics_records/services/: __init__.py  audit_service.py  backup_service.py  export_service.py  import_service.py
src/cosmetics_records/utils/: __init__.py  localization.py  time_utils.py  validators.py
src/cosmetics_records/views/: __init__.py  constants.py  styles.py
src/cosmetics_records/views/audit/: __init__.py  audit_log_view.py
src/cosmetics_records/views/clients/: __init__.py  client_detail_view.py  client_list_view.py
src/cosmetics_records/views/components/: __init__.py  alphabet_filter.py  autocomplete.py  date_picker.py  navbar.py  search_bar.py  tag_input.py
src/cosmetics_records/views/dialogs/: __init__.py  add_client_dialog.py  add_inventory_dialog.py  add_product_record_dialog.py  add_treatment_dialog.py  backup_management_dialog.py  base_dialog.py  edit_client_dialog.py  edit_inventory_dialog.py  edit_product_record_dialog.py  edit_treatment_dialog.py  import_dialog.py  mail_merge_export_dialog.py
src/cosmetics_records/views/inventory/: __init__.py  inventory_view.py
src/cosmetics_records/views/settings/: __init__.py  settings_view.py
test_data/: README.md  clients.csv  generate_test_data.py  inventory.csv  product_sales.csv  treatments.csv
tests/: __init__.py  conftest.py
tests/fixtures/import/: invalid_date_format.csv  invalid_duplicate_ids.csv  invalid_inventory_unit.csv  invalid_missing_columns.csv  sample_clients.csv  sample_inventory.csv  sample_product_sales.csv  sample_treatments.csv
tests/integration/: __init__.py  test_database.py  test_full_workflow.py
tests/unit/: __init__.py  test_controllers.py  test_import_service.py  test_localization.py  test_models.py  test_services.py  test_styles.py  test_view_handlers.py
